# dino-run

./: dino_run.js  dino_run.wasm  doc.md
code/: CMakeLists.txt  README.md  build_web.sh
code/build_web/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  dino_run.data  dino_run.html
code/src/: main.cpp
code/src/core/: GameWorld.cpp  Obstacle.cpp  TRex.cpp
code/src/core/headers/: GameWorld.h  Obstacle.h  TRex.h  constants.h
code/src/ia/: Layer.cpp  MLP.cpp  Neuron.cpp
code/src/ia/headers/: Layer.h  MLP.h  Neuron.h
